--- a/page1.html
+++ b/page1.html
@@ -12,8 +12,8 @@
   <h4>
 	  Diplômé d’une licence en Banque Finance et Assurances, en 2024 à ISCA Dakar (Institut Supérieur de Commerce   
    <br> et D’Administration des Affaires), je suis une étudiante dynamique et méthodique. Durant mon parcours, j’ai effectué aussi des  
-   expériences professionnelles<br> dans des entreprises<br> augmentant ainsi mes connaissances et compétences.<br> 
-    Actuellement, je suis à la recherche d’un stage au sein d’une entreprise <br> dans laquelle je garantirai un service de qualité.  
+   expériences professionnelles dans des<br> entreprises augmentant ainsi mes<br> connaissances et compétences.<br> 
+    Actuellement, je suis à la recherche d’un stage au sein d’une entreprise dans<br> laquelle je garantirai un service de qualité.  
    <br> 
   </h4>
 
